# airllm-ollama-benchmark

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
assets/: terminal_output_sample.txt
config/: hardware_profiles.json  rate_limits.json  setup.json
docs/: ARCHITECTURE.md  ASSIGNMENT_ANALYSIS.md  COSTS.md  FEEDBACK_RISK_CHECKLIST.md  GRADING_RUBRIC.md  GUIDELINES_REQUIREMENTS.md  HARDWARE_PROFILES.md  MODEL_SELECTION.md  PLAN.md  PRD_INDEX.md  PROMPTS.md  TODO.md
docs/prds/: PRD_01_env_setup.md  PRD_02_ollama_baseline.md  PRD_03_hf_model_selection.md  PRD_04_airllm_runner.md  PRD_05_metrics_collection.md  PRD_06_sdk_architecture.md  PRD_07_results_storage.md  PRD_08_visualization.md  PRD_09_testing_quality.md
docs/prds/00_infrastructure/: prd_00_001_configure_project_section_in_pyproject_toml.md  prd_00_002_configure_build_system_with_hatchling.md  prd_00_003_configure_hatch_wheel_packages_path.md  prd_00_004_configure_dependency_groups_dev_section.md  prd_00_005_configure_ruff_line_length_120.md  prd_00_006_configure_ruff_target_version_py310.md  prd_00_007_configure_ruff_lint_selectors_e_f_w_i_n_up_b_c4_sim.md  (+43 more)
notebooks/: results_analysis.ipynb
scripts/: build_catalog.py  generate_prds.py  prd_catalog.json
scripts/catalog/: g00.py  g01.py  g02.py  g03.py  g04.py  g05.py  g06.py  g07.py  g08.py  g09.py  g10.py  g11.py  g12.py  g13.py
src/airllm_benchmark/: __init__.py  main.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_main.py
(+551 files in other folders)
